align-four bugs fixed

--- a/games/align-four/styles/index.processed.css
+++ b/games/align-four/styles/index.processed.css
@@ -28,13 +28,18 @@ body {
   text-align: center;
   overflow: hidden;
   transform: scale(0.8);
+  position: absolute;
+  left: 0; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto;
+  margin-top: -3em;
 }
 
 .content {
   display: inline-block;
   width: 364px;
   margin: 0 auto;
-  margin-top: 1em;
 }
 
 .sidebar {
